# sustainable-cloud

./: README.md  down.sh  up.sh
deploy/: down.sh  up.sh
deploy-hpa/: ingress.yaml
deploy-hpa/apps/: gofiberapi.yaml  netcoreapi.yaml  ntexapi.yaml  springapi.yaml  warpapi.yaml
deploy/apps/: gofiberapi.yaml  netcoreapi.yaml  nodeapi.yaml  springapi.yaml  warpapi.yaml
deploy/dashboard/: dashboard.yaml
deploy/extras/: address-pool.yaml  ingress-nginx.yaml
deploy/ingress/: ingress.yaml
deploy/load.test/k6/: fiber.js  net.js  node.js  spring.js  warp.js
deploy/microk8s/: address-pool.yaml
gofiber_api/: .dockerignore  Dockerfile  go.mod
gofiber_api/src/: main.go
netcore_api/: Dockerfile  Program.cs  netcore_api.csproj
netcore_api/Properties/: launchSettings.json
node_api/: Dockerfile  package-lock.json  package.json
node_api/src/: index.js
spring_api/: Dockerfile  README.md  pom.xml
spring_api/src/main/java/api/: Application.java  WeatherForecast.java
warp_api/: Cargo.toml  Dockerfile
warp_api/src/: main.rs
