[package]
name = "warp_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
warp = { version = "0.3.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
num_cpus = "*"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5" 